<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_005"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_95"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal_30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <ImageView
        android:id="@+id/img_background"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/starwars_wallpaper"
        app:layout_constraintBottom_toBottomOf="@+id/guideline_horizontal_30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_search"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/background_input"
        android:backgroundTint="@color/white"
        android:drawableStart="@drawable/ic_baseline_search_24"
        android:drawableEnd="@drawable/ic_baseline_clear_24"
        android:drawablePadding="10dp"
        android:hint="@string/search_characters"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/color_7a7574"
        app:layout_constraintBottom_toBottomOf="@+id/img_background"
        app:layout_constraintEnd_toEndOf="@+id/guideline_vertical_95"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_005"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/hey_there"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tv_description"
        app:layout_constraintEnd_toEndOf="@id/guideline_vertical_95"
        app:layout_constraintStart_toStartOf="@id/guideline_vertical_005"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/description"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/et_search"
        app:layout_constraintEnd_toEndOf="@id/guideline_vertical_95"
        app:layout_constraintStart_toStartOf="@id/guideline_vertical_005"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_characters"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/guideline_vertical_95"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_005"
        app:layout_constraintTop_toBottomOf="@+id/img_background"
        tools:listitem="@layout/item_character" />

    <ProgressBar
        android:id="@+id/progress_circular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_background" />


    <TextView
        android:id="@+id/tv_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_results"
        android:textColor="@color/color_7a7574"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tv_error_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_background"
        app:layout_constraintVertical_bias="0.9" />

    <TextView
        android:id="@+id/tv_error_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/no_results_description"
        android:textColor="@color/color_7a7574"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/img_no_character_found"
        app:layout_constraintEnd_toEndOf="@id/guideline_vertical_95"
        app:layout_constraintStart_toStartOf="@id/guideline_vertical_005"
        app:layout_constraintVertical_bias="0.9" />

    <ImageView
        android:id="@+id/img_no_character_found"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/ic_no_characters"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="2:1"
        app:layout_constraintVertical_bias="0.6"
        app:layout_constraintEnd_toEndOf="@+id/guideline_vertical_95"
        app:layout_constraintStart_toStartOf="@id/guideline_vertical_005"
        app:layout_constraintTop_toBottomOf="@+id/img_background" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="img_no_character_found, tv_error,tv_error_description" />
</androidx.constraintlayout.widget.ConstraintLayout>