<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/starwars_wallpaper"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_vertical_005"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_vertical_95"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />

        <ProgressBar
            android:id="@+id/progress_circular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraint_details"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:background="@drawable/background_gradient"
            android:padding="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            app:layout_constraintEnd_toEndOf="@id/guideline_vertical_95"
            app:layout_constraintStart_toStartOf="@id/guideline_vertical_005"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_details_name"
                style="@style/DetailsCharacterStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/name"

                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/tv_details_name_value"
                style="@style/DetailsCharacterStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="end"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_details_name"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Luke Skywalker" />

            <TextView
                android:id="@+id/tv_details_height"
                style="@style/DetailsCharacterStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/height"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_details_name" />

            <TextView
                android:id="@+id/tv_details_height_value"
                style="@style/DetailsCharacterStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="end"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_details_height"
                app:layout_constraintTop_toBottomOf="@+id/tv_details_name_value"
                tools:text="182" />

            <TextView
                android:id="@+id/tv_details_birth_year"
                style="@style/DetailsCharacterStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="10dp"
                android:text="@string/birth_year"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_details_height" />

            <TextView
                android:id="@+id/tv_details_birth_year_value"
                style="@style/DetailsCharacterStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="end"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/tv_details_birth_year"
                app:layout_constraintTop_toBottomOf="@+id/tv_details_height_value"
                tools:text="1Lb85" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_population"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/color_cae3d1"
            android:padding="12dp"
            android:visibility="gone"
            app:cardCornerRadius="12dp"
            app:layout_constraintEnd_toEndOf="@id/guideline_vertical_95"
            app:layout_constraintStart_toStartOf="@id/guideline_vertical_005"
            app:layout_constraintTop_toBottomOf="@+id/constraint_details">

            <TextView
                android:id="@+id/tv_details_population"
                style="@style/DetailsTitleStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:gravity="center"
                tools:text="Luke Skywalker" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_movies"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/color_cae3d1"
            android:padding="12dp"
            android:visibility="gone"
            app:cardCornerRadius="12dp"
            app:layout_constraintEnd_toEndOf="@id/guideline_vertical_95"
            app:layout_constraintStart_toStartOf="@id/guideline_vertical_005"
            app:layout_constraintTop_toBottomOf="@+id/card_population">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_movies"
                    style="@style/DetailsTitleStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/movies_this_character_appeared_in"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_movies"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_movies"
                    tools:itemCount="2"
                    tools:listitem="@layout/item_movie" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/card_species"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/color_cae3d1"
            android:padding="12dp"
            android:visibility="gone"
            app:cardCornerRadius="12dp"
            app:layout_constraintEnd_toEndOf="@id/guideline_vertical_95"
            app:layout_constraintStart_toStartOf="@id/guideline_vertical_005"
            app:layout_constraintTop_toBottomOf="@+id/card_movies">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TextView
                    android:id="@+id/tv_species"
                    style="@style/DetailsTitleStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/species_of_this_character"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_species"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_species"
                    tools:itemCount="2"
                    tools:listitem="@layout/item_specie" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>